2010-04-22 David Wetzel <dave@turbocat.de>

    * Source/Additions/Unicode.m: replace objc_malloc with NSZoneMalloc
    and objc_free with NSZoneFree

    * Source/Additions/NSFileHandle+GNUstepBase.m: should work with ipv6
    (The old code does fail on Snow Leopard, even with ipv4 addresses.)    

    * Source/Additions/GSXML.m: added GSObjCRuntime.h
    * Headers/Additions/GNUstepBase/GSObjCRuntime.h: 
    replace objc_malloc with NSZoneMalloc and objc_free with NSZoneFree


2010-04-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: ([mainBundle]) Fix error determining whether
	the bundle is an app or not ... was breaking lookup of tool resources.

2010-04-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/cifframe.m (cifframe_type): Fix the cached information
	for the NSRange type.  Was causing incorrect forwarding of NSRange
        arguments on 64bit systems.

2010-04-18   Nicola Pero <nicola.pero@meta-innovation.com>

	Fixed inefficiencies in building the SSL bundle.
	* SSL/Makefile.postable: Do not create GNUSTEP_TARGET_DIR/config.h
	from config.h; do not depend on config.status.
	* SSL/Makefile.preamble: Corresponding updates to includes.

2010-04-18   Nicola Pero <nicola.pero@meta-innovation.com>

	Fixed bug 25356 ("make ignoring installation domain configuration
	on windows").
	* configure.ac: Moved the path configuration here so that it is
	executed at the right time.  Removed duplicated code for all the
	path config options.  (AC_CONFIG_SUBDIRS): Removed
	Source/pathconfig.
	* configure: Regenerated.
	* config.mak.in: Merged code from
	Source/pathconfig/pathconfig.mak.in.
	* Source/pathconfig: Removed.
	* GNUmakefile: Do not include
	Source/pathconfig/pathconfig.mak.
	* Documentation/GNUmakefile: Same change.
	* NSTimeZones/GNUmakefile: Same change.
	* Source/GNUmakefile: Same change.
	* SSL/GNUmakefile: Same change.
	* Tools/GNUmakefile: Same change.
	* Source/Makefile.postamble (after-distclean): Do not remove
	files in pathconfig/.